--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.9.0
-envlist = py38, py39, py310
+envlist = py38, py39, py310, flake8
 isolated_build = true
 
 [gh-actions]
@@ -16,3 +16,8 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
     pytest --basetemp={envtmpdir}
+
+[testenv:flake8]
+basepython = python3.9
+deps = flake8
+commands = flake8 src tests
